--- a/src/Acme/SiteBundle/Resources/views/OFM/usuario.html.twig
+++ b/src/Acme/SiteBundle/Resources/views/OFM/usuario.html.twig
@@ -5,14 +5,14 @@
 {% endblock %}
 {% block title_spacer %}{% endblock %}
 {% block body %}
-    <div class="www-header" style="background-image: linear-gradient(to bottom, transparent, white), url(/img/pfspa_2017.jpg)">
+    <div class="www-header" style="background-image: linear-gradient(to bottom, transparent, white), url(/img/pfspa_2017.JPG)">
         <span>{% if data is not null %}Fray {{data.nombre ~ " " ~ data.apellidos}}{%else%}Iniciar sesión{%endif%}</span>
     </div>
 
 
-    {% if data is null %}    
+    {% if data is null %}
         <div class="panel panel-default fixer" style="max-width: 400px; margin-top: -100px;">
-            <div class="panel-heading" style="text-align: left">Inicio de sesión</div>
+            <div class="panel-heading" style="text-align: left">Inicio de sesión de hermanos</div>
             <div class="panel-body">
                 <center>
                     <img src="/img/logo.png" width="200px">
@@ -66,7 +66,7 @@
                 });
             });
         </script>
-    {% else %}    
+    {% else %}
         <div class="fixer sheet-art sty-box-overflow-auto sty-box-padding-5 " style="margin-top: -90px;min-height: 800px;">
             <div class="sty-box-overflow-auto">
                 <script>
