--- a/src/Acme/SiteBundle/Resources/views/Web/footer.html.twig
+++ b/src/Acme/SiteBundle/Resources/views/Web/footer.html.twig
@@ -5,6 +5,9 @@
           <span class="sty-label-blue">Desarrollado por </span>
           <img align="top" width="18px" height="18px" src="../../img/logo_sfs.png">
           <a target="_blank" href="http://sfs-sfsuser.rhcloud.com/" class="st-y-text-main sty-font-small sty-label" style="color: blue;">SFSSoft</a>
+          {% if not role_granted("ADMIN") %} -
+          <a href="{{path("adminlogin")}}">Administrador</a>
+          {% endif %}
       </div>
   </center>
 </div>
